--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "apollo-server": "^2.25.2",
     "axios": "^0.24.0",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "perf_hooks": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
