--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "apollo-server": "^2.25.2",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
-    "perf_hooks": "^0.0.1"
+    "perf_hooks": "^0.0.1",
+    "web3": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
