--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "apollo-server": "^2.25.2",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
+    "graphql": "^15.8.0",
     "perf_hooks": "^0.0.1",
     "web3": "^1.6.1"
   },
