--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bn.js": "^5.2.0",
     "dotenv": "^10.0.0",
     "graphql": "^15.8.0",
+    "mongodb": "^4.3.1",
     "perf_hooks": "^0.0.1",
     "web3": "^1.6.1"
   },
